# prose

./: setup.cfg
src/prose/: __init__.py  datasets.py  scop.py  utils.py
src/prose/models/: lstm.py  multitask.py
