[metadata]
name = ProSE
version = 0.0.1-dev
description = "Multi-task and masked language model-based protein sequence embedding models"
long_description = file: README.md
url = ""
author = ""
author_email = ""
maintainer = ""
maintainer_email = ""
license = ""
license_file = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Programming Language :: Python
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.6
keywords =
    proteins
    protein sequences
    natural language processing
    language models
    deep neural networks
    inductive bias
    transfer learning
    contact prediction
    transmembrane region prediction


[options]
include_package_data = True
packages = find:
package_dir =
    = src
install_requires =
    numpy
    pandas
    Pillow
    scipy
    tqdm
    requests


[options.packages.find]
where = src


[options.package_data]
* = *.json

